--- a/style.css
+++ b/style.css
@@ -214,7 +214,7 @@
       .dark-img{
       
      
-       background-image: url(images/4k/download\ \(7\).jpg);
+       background-image: url(images/4k/7-2.jpg);
 
       }
 
